starting to mess with with a server

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,6 @@
 
 
 server:
-	g++ -o Server chat_server.cpp -lboost_thread-mt -lboost_system-mt
+	g++ -o Server test_server.cpp -lboost_thread-mt -lboost_system-mt
 client:
-	g++ -o Client chat_client.cpp -lboost_thread-mt -lboost_system-mt
+	g++ -o Client test_client.cpp -lboost_thread-mt -lboost_system-mt
