getting string socket started

--- a/server/Makefile
+++ b/server/Makefile
@@ -4,3 +4,6 @@ server:
 	g++ -o Server test_server.cpp -lboost_thread-mt -lboost_system-mt
 client:
 	g++ -o Client test_client.cpp -lboost_thread-mt -lboost_system-mt
+
+clean:
+	rm -rf *.out Client Server
