--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 
 
 server:
-	g++ -o Server test_server.cpp -lboost_thread-mt -lboost_system-mt
+	g++ -o Server Server.cpp -lboost_thread-mt -lboost_system-mt
 client:
 	g++ -o Client test_client.cpp -lboost_thread-mt -lboost_system-mt
 
