--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,9 @@
 
 
 server:
+	g++ -o server ss_server.cpp -pthread
+
+2server:
 	g++ -o Server server.cpp /usr/local/stow/boost/boost_1_53_0/lib/libboost_*.a -I/usr/local/stow/boost/boost_1_53_0/include/ -lboost_thread-mt -lboost_system-mt
 client:
 	g++ -o Client test_client.cpp -lboost_thread-mt -lboost_system-mt
