commenting out MySQL code for now

--- a/server/Makefile
+++ b/server/Makefile
@@ -7,7 +7,7 @@ server:
 	g++ -o Server server.cpp /usr/local/stow/boost/boost_1_53_0/lib/libboost_*.a -I/usr/local/stow/boost/boost_1_53_0/include/ -lboost_thread-mt -lboost_system-mt -std=gnu++0x
 
 3server:
-	g++ -o Server server.cpp -lboost_thread-mt -lboost_system-mt
+	g++ -o Server server.cpp -lboost_thread-mt -lboost_system-mt -std=gnu++0x
 
 client:
 	g++ -o Client test_client.cpp -lboost_thread-mt -lboost_system-mt
