--- a/3505_SS/SpreadsheetGUI/SpreadsheetGUI.csproj
+++ b/3505_SS/SpreadsheetGUI/SpreadsheetGUI.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{0FA71E0D-98CE-4F91-9984-3EF40B29D1A0}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SS</RootNamespace>
     <AssemblyName>SpreadsheetGUI</AssemblyName>
