--- a/client/SpreadsheetGUI/SpreadsheetGUI.csproj
+++ b/client/SpreadsheetGUI/SpreadsheetGUI.csproj
@@ -85,7 +85,7 @@
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="Spreadsheet, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Spreadsheet\bin\x86\Debug\Spreadsheet.dll</HintPath>
+      <HintPath>..\Spreadsheet\obj\x86\Debug\Spreadsheet.dll</HintPath>
     </Reference>
     <Reference Include="SpreadsheetPanel">
       <HintPath>..\SpreadsheetPanel.dll</HintPath>
